; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevc_mc_uni_msa.c_common_vt_4t_16w_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevc_mc_uni_msa.c_common_vt_4t_16w_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32, i32*, i32)* @common_vt_4t_16w_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @common_vt_4t_16w_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32* %4, i32 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32, align 4
  %27 = alloca i32, align 4
  %28 = alloca i32, align 4
  %29 = alloca i32, align 4
  %30 = alloca i32, align 4
  %31 = alloca i32, align 4
  %32 = alloca i32, align 4
  %33 = alloca i32, align 4
  %34 = alloca i32, align 4
  %35 = alloca i32, align 4
  %36 = alloca i32, align 4
  %37 = alloca i32, align 4
  %38 = alloca i32, align 4
  %39 = alloca i32, align 4
  %40 = alloca i32, align 4
  %41 = alloca i32, align 4
  %42 = alloca i32, align 4
  %43 = alloca i32, align 4
  %44 = alloca i32, align 4
  %45 = alloca i32, align 4
  %46 = alloca i32, align 4
  %47 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  store i32 %5, i32* %12, align 4
  %48 = load i32, i32* %8, align 4
  %49 = load i32*, i32** %7, align 8
  %50 = sext i32 %48 to i64
  %51 = sub i64 0, %50
  %52 = getelementptr inbounds i32, i32* %49, i64 %51
  store i32* %52, i32** %7, align 8
  %53 = load i32*, i32** %11, align 8
  %54 = call i32 @LD_SH(i32* %53)
  store i32 %54, i32* %39, align 4
  %55 = load i32, i32* %39, align 4
  %56 = load i32, i32* %33, align 4
  %57 = load i32, i32* %34, align 4
  %58 = call i32 @SPLATI_H2_SB(i32 %55, i32 0, i32 1, i32 %56, i32 %57)
  %59 = load i32*, i32** %7, align 8
  %60 = load i32, i32* %8, align 4
  %61 = load i32, i32* %14, align 4
  %62 = load i32, i32* %15, align 4
  %63 = load i32, i32* %16, align 4
  %64 = call i32 @LD_SB3(i32* %59, i32 %60, i32 %61, i32 %62, i32 %63)
  %65 = load i32, i32* %8, align 4
  %66 = mul nsw i32 3, %65
  %67 = load i32*, i32** %7, align 8
  %68 = sext i32 %66 to i64
  %69 = getelementptr inbounds i32, i32* %67, i64 %68
  store i32* %69, i32** %7, align 8
  %70 = load i32, i32* %14, align 4
  %71 = load i32, i32* %15, align 4
  %72 = load i32, i32* %16, align 4
  %73 = call i32 @XORI_B3_128_SB(i32 %70, i32 %71, i32 %72)
  %74 = load i32, i32* %15, align 4
  %75 = load i32, i32* %14, align 4
  %76 = load i32, i32* %16, align 4
  %77 = load i32, i32* %15, align 4
  %78 = load i32, i32* %21, align 4
  %79 = load i32, i32* %24, align 4
  %80 = call i32 @ILVR_B2_SB(i32 %74, i32 %75, i32 %76, i32 %77, i32 %78, i32 %79)
  %81 = load i32, i32* %15, align 4
  %82 = load i32, i32* %14, align 4
  %83 = load i32, i32* %16, align 4
  %84 = load i32, i32* %15, align 4
  %85 = load i32, i32* %27, align 4
  %86 = load i32, i32* %30, align 4
  %87 = call i32 @ILVL_B2_SB(i32 %81, i32 %82, i32 %83, i32 %84, i32 %85, i32 %86)
  %88 = load i32, i32* %12, align 4
  %89 = ashr i32 %88, 2
  store i32 %89, i32* %13, align 4
  br label %90

90:                                               ; preds = %94, %6
  %91 = load i32, i32* %13, align 4
  %92 = add nsw i32 %91, -1
  store i32 %92, i32* %13, align 4
  %93 = icmp ne i32 %91, 0
  br i1 %93, label %94, label %233

94:                                               ; preds = %90
  %95 = load i32*, i32** %7, align 8
  %96 = load i32, i32* %8, align 4
  %97 = load i32, i32* %17, align 4
  %98 = load i32, i32* %18, align 4
  %99 = load i32, i32* %19, align 4
  %100 = load i32, i32* %20, align 4
  %101 = call i32 @LD_SB4(i32* %95, i32 %96, i32 %97, i32 %98, i32 %99, i32 %100)
  %102 = load i32, i32* %8, align 4
  %103 = mul nsw i32 4, %102
  %104 = load i32*, i32** %7, align 8
  %105 = sext i32 %103 to i64
  %106 = getelementptr inbounds i32, i32* %104, i64 %105
  store i32* %106, i32** %7, align 8
  %107 = load i32, i32* %17, align 4
  %108 = load i32, i32* %18, align 4
  %109 = load i32, i32* %19, align 4
  %110 = load i32, i32* %20, align 4
  %111 = call i32 @XORI_B4_128_SB(i32 %107, i32 %108, i32 %109, i32 %110)
  %112 = load i32, i32* %17, align 4
  %113 = load i32, i32* %16, align 4
  %114 = load i32, i32* %18, align 4
  %115 = load i32, i32* %17, align 4
  %116 = load i32, i32* %19, align 4
  %117 = load i32, i32* %18, align 4
  %118 = load i32, i32* %20, align 4
  %119 = load i32, i32* %19, align 4
  %120 = load i32, i32* %22, align 4
  %121 = load i32, i32* %25, align 4
  %122 = load i32, i32* %23, align 4
  %123 = load i32, i32* %26, align 4
  %124 = call i32 @ILVR_B4_SB(i32 %112, i32 %113, i32 %114, i32 %115, i32 %116, i32 %117, i32 %118, i32 %119, i32 %120, i32 %121, i32 %122, i32 %123)
  %125 = load i32, i32* %17, align 4
  %126 = load i32, i32* %16, align 4
  %127 = load i32, i32* %18, align 4
  %128 = load i32, i32* %17, align 4
  %129 = load i32, i32* %19, align 4
  %130 = load i32, i32* %18, align 4
  %131 = load i32, i32* %20, align 4
  %132 = load i32, i32* %19, align 4
  %133 = load i32, i32* %28, align 4
  %134 = load i32, i32* %31, align 4
  %135 = load i32, i32* %29, align 4
  %136 = load i32, i32* %32, align 4
  %137 = call i32 @ILVL_B4_SB(i32 %125, i32 %126, i32 %127, i32 %128, i32 %129, i32 %130, i32 %131, i32 %132, i32 %133, i32 %134, i32 %135, i32 %136)
  %138 = load i32, i32* %21, align 4
  %139 = load i32, i32* %22, align 4
  %140 = load i32, i32* %33, align 4
  %141 = load i32, i32* %34, align 4
  %142 = call i32 @HEVC_FILT_4TAP_SH(i32 %138, i32 %139, i32 %140, i32 %141)
  store i32 %142, i32* %40, align 4
  %143 = load i32, i32* %24, align 4
  %144 = load i32, i32* %25, align 4
  %145 = load i32, i32* %33, align 4
  %146 = load i32, i32* %34, align 4
  %147 = call i32 @HEVC_FILT_4TAP_SH(i32 %143, i32 %144, i32 %145, i32 %146)
  store i32 %147, i32* %41, align 4
  %148 = load i32, i32* %22, align 4
  %149 = load i32, i32* %23, align 4
  %150 = load i32, i32* %33, align 4
  %151 = load i32, i32* %34, align 4
  %152 = call i32 @HEVC_FILT_4TAP_SH(i32 %148, i32 %149, i32 %150, i32 %151)
  store i32 %152, i32* %42, align 4
  %153 = load i32, i32* %25, align 4
  %154 = load i32, i32* %26, align 4
  %155 = load i32, i32* %33, align 4
  %156 = load i32, i32* %34, align 4
  %157 = call i32 @HEVC_FILT_4TAP_SH(i32 %153, i32 %154, i32 %155, i32 %156)
  store i32 %157, i32* %43, align 4
  %158 = load i32, i32* %27, align 4
  %159 = load i32, i32* %28, align 4
  %160 = load i32, i32* %33, align 4
  %161 = load i32, i32* %34, align 4
  %162 = call i32 @HEVC_FILT_4TAP_SH(i32 %158, i32 %159, i32 %160, i32 %161)
  store i32 %162, i32* %44, align 4
  %163 = load i32, i32* %30, align 4
  %164 = load i32, i32* %31, align 4
  %165 = load i32, i32* %33, align 4
  %166 = load i32, i32* %34, align 4
  %167 = call i32 @HEVC_FILT_4TAP_SH(i32 %163, i32 %164, i32 %165, i32 %166)
  store i32 %167, i32* %45, align 4
  %168 = load i32, i32* %28, align 4
  %169 = load i32, i32* %29, align 4
  %170 = load i32, i32* %33, align 4
  %171 = load i32, i32* %34, align 4
  %172 = call i32 @HEVC_FILT_4TAP_SH(i32 %168, i32 %169, i32 %170, i32 %171)
  store i32 %172, i32* %46, align 4
  %173 = load i32, i32* %31, align 4
  %174 = load i32, i32* %32, align 4
  %175 = load i32, i32* %33, align 4
  %176 = load i32, i32* %34, align 4
  %177 = call i32 @HEVC_FILT_4TAP_SH(i32 %173, i32 %174, i32 %175, i32 %176)
  store i32 %177, i32* %47, align 4
  %178 = load i32, i32* %40, align 4
  %179 = load i32, i32* %41, align 4
  %180 = load i32, i32* %42, align 4
  %181 = load i32, i32* %43, align 4
  %182 = call i32 @SRARI_H4_SH(i32 %178, i32 %179, i32 %180, i32 %181, i32 6)
  %183 = load i32, i32* %44, align 4
  %184 = load i32, i32* %45, align 4
  %185 = load i32, i32* %46, align 4
  %186 = load i32, i32* %47, align 4
  %187 = call i32 @SRARI_H4_SH(i32 %183, i32 %184, i32 %185, i32 %186, i32 6)
  %188 = load i32, i32* %40, align 4
  %189 = load i32, i32* %41, align 4
  %190 = load i32, i32* %42, align 4
  %191 = load i32, i32* %43, align 4
  %192 = call i32 @SAT_SH4_SH(i32 %188, i32 %189, i32 %190, i32 %191, i32 7)
  %193 = load i32, i32* %44, align 4
  %194 = load i32, i32* %45, align 4
  %195 = load i32, i32* %46, align 4
  %196 = load i32, i32* %47, align 4
  %197 = call i32 @SAT_SH4_SH(i32 %193, i32 %194, i32 %195, i32 %196, i32 7)
  %198 = load i32, i32* %44, align 4
  %199 = load i32, i32* %40, align 4
  %200 = load i32, i32* %45, align 4
  %201 = load i32, i32* %41, align 4
  %202 = load i32, i32* %46, align 4
  %203 = load i32, i32* %42, align 4
  %204 = load i32, i32* %47, align 4
  %205 = load i32, i32* %43, align 4
  %206 = load i32, i32* %35, align 4
  %207 = load i32, i32* %36, align 4
  %208 = load i32, i32* %37, align 4
  %209 = load i32, i32* %38, align 4
  %210 = call i32 @PCKEV_B4_UB(i32 %198, i32 %199, i32 %200, i32 %201, i32 %202, i32 %203, i32 %204, i32 %205, i32 %206, i32 %207, i32 %208, i32 %209)
  %211 = load i32, i32* %35, align 4
  %212 = load i32, i32* %36, align 4
  %213 = load i32, i32* %37, align 4
  %214 = load i32, i32* %38, align 4
  %215 = call i32 @XORI_B4_128_UB(i32 %211, i32 %212, i32 %213, i32 %214)
  %216 = load i32, i32* %35, align 4
  %217 = load i32, i32* %36, align 4
  %218 = load i32, i32* %37, align 4
  %219 = load i32, i32* %38, align 4
  %220 = load i32*, i32** %9, align 8
  %221 = load i32, i32* %10, align 4
  %222 = call i32 @ST_UB4(i32 %216, i32 %217, i32 %218, i32 %219, i32* %220, i32 %221)
  %223 = load i32, i32* %10, align 4
  %224 = mul nsw i32 4, %223
  %225 = load i32*, i32** %9, align 8
  %226 = sext i32 %224 to i64
  %227 = getelementptr inbounds i32, i32* %225, i64 %226
  store i32* %227, i32** %9, align 8
  %228 = load i32, i32* %23, align 4
  store i32 %228, i32* %21, align 4
  %229 = load i32, i32* %26, align 4
  store i32 %229, i32* %24, align 4
  %230 = load i32, i32* %29, align 4
  store i32 %230, i32* %27, align 4
  %231 = load i32, i32* %32, align 4
  store i32 %231, i32* %30, align 4
  %232 = load i32, i32* %20, align 4
  store i32 %232, i32* %16, align 4
  br label %90

233:                                              ; preds = %90
  ret void
}

declare dso_local i32 @LD_SH(i32*) #1

declare dso_local i32 @SPLATI_H2_SB(i32, i32, i32, i32, i32) #1

declare dso_local i32 @LD_SB3(i32*, i32, i32, i32, i32) #1

declare dso_local i32 @XORI_B3_128_SB(i32, i32, i32) #1

declare dso_local i32 @ILVR_B2_SB(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @ILVL_B2_SB(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @LD_SB4(i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @XORI_B4_128_SB(i32, i32, i32, i32) #1

declare dso_local i32 @ILVR_B4_SB(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @ILVL_B4_SB(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @HEVC_FILT_4TAP_SH(i32, i32, i32, i32) #1

declare dso_local i32 @SRARI_H4_SH(i32, i32, i32, i32, i32) #1

declare dso_local i32 @SAT_SH4_SH(i32, i32, i32, i32, i32) #1

declare dso_local i32 @PCKEV_B4_UB(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @XORI_B4_128_UB(i32, i32, i32, i32) #1

declare dso_local i32 @ST_UB4(i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
